tests/errors/ops.pa

program gcd2(output);
var x: integer;
	y : real;
	a, b, c : BOOLEAN;

function integer(a, b, c: integer; var f2, g, h : boolean) : real;
	begin
		integer := 2
	end;


begin
x := x = x;
 x := 2 * 1 And (-(- y) < 2);
 a := not b aNd c;
 A := b MoD a and c	;
 y := 3 mod (3 mod (5 * 0.0));
end.

